syntax="proto3";

message req_token_create {
    string from = 1;
    string to = 2;
    uint64 amount = 3;
    uint64 nonce = 4;
    string priv = 5;
    string symbol = 6;
    uint64 total = 7;
    uint64 fee = 8;
  }
message resp_token_create { string hash = 1; }
  
message req_token_balance {
    string address = 1;
    string symbol = 2;
  }
message resp_token_balance { uint64 balnce = 1; }
  
message req_token_transaction {
    string from = 1;
    string to = 2;
    uint64 amount = 3;
    uint64 nonce = 4;
    string priv = 5;
    uint64 tokenAmount = 6;
    string symbol = 7;
    uint64 fee = 8;
  }
message resp_token_transaction { string hash = 1; }

service Greeter{
    rpc CreateContract(req_token_create) returns (resp_token_create) {}
    rpc MintToken(req_token_create) returns (resp_token_create) {}
    rpc GetBalanceToken(req_token_balance) returns (resp_token_balance) {}
    rpc SendToken(req_token_transaction) returns (resp_token_transaction) {}
}